# GaussAnalytics

./: .env.example  .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/gauss-auth/: Cargo.toml
crates/gauss-auth/src/: apikey.rs  embed.rs  lib.rs  password.rs  perms.rs  session.rs
crates/gauss-chart/: Cargo.toml
crates/gauss-chart/src/: lib.rs  recommend.rs
crates/gauss-chat/: Cargo.toml
crates/gauss-chat-tui/: Cargo.toml
crates/gauss-chat-tui/src/: main.rs  render.rs
crates/gauss-chat/src/: lib.rs  main.rs  models.rs  templates.rs
crates/gauss-chat/tests/: http.rs
crates/gauss-config/: Cargo.toml
crates/gauss-config/src/: lib.rs
crates/gauss-core/: Cargo.toml
crates/gauss-core/src/: domain.rs  error.rs  gql.rs  lib.rs
crates/gauss-db/: Cargo.toml
crates/gauss-db/migrations/: 0001_init.sql  0002_data_source_connection.sql  0003_grants_and_api_keys.sql  0004_content.sql
crates/gauss-db/migrations_mysql/: 0001_init.sql  0002_grants_and_api_keys.sql  0003_content.sql
crates/gauss-db/src/: lib.rs  memory.rs  mysql.rs  postgres.rs  repository.rs  sqlite.rs
crates/gauss-drivers/: Cargo.toml
crates/gauss-drivers/src/: bigquery.rs  clickhouse.rs  lib.rs  mysql.rs  oracle.rs  postgres.rs  rest.rs  snowflake.rs  sqlite.rs
crates/gauss-drivers/tests/: differential.rs  end_to_end.rs
crates/gauss-embed/: Cargo.toml
crates/gauss-embed/src/: hashing.rs  lib.rs  ollama.rs  openai.rs
crates/gauss-engine/: Cargo.toml
crates/gauss-engine/src/: agent.rs  components.rs  context.rs  dataframe.rs  enhancer.rs  error.rs  lib.rs  prompt.rs  recovery.rs  tool.rs  traits.rs  workflow.rs
crates/gauss-engine/src/defaults/: audit.rs  file_system.rs  memory.rs  mod.rs  observability.rs  store.rs  store_file.rs  user.rs
crates/gauss-engine/src/model/: agent_config.rs  audit.rs  conversation.rs  llm.rs  memory.rs  mod.rs  observability.rs  tool.rs  user.rs
crates/gauss-insight/: Cargo.toml
crates/gauss-insight/src/: lib.rs
crates/gauss-llm/: Cargo.toml
crates/gauss-llm/src/: accumulator.rs  anthropic.rs  cache.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs  vllm.rs
crates/gauss-mcp-gateway/: Cargo.toml
crates/gauss-mcp-gateway/src/: audit.rs  lib.rs  policy.rs
crates/gauss-memory/: Cargo.toml
crates/gauss-memory/src/: in_memory_vector.rs  lib.rs  qdrant.rs
crates/gauss-nl2sql/: Cargo.toml
crates/gauss-nl2sql/src/: guard.rs  lib.rs
crates/gauss-notebook/: Cargo.toml
crates/gauss-notebook/src/: dag.rs  lib.rs  nbformat.rs
crates/gauss-notebook/tests/: gateway.rs
crates/gauss-query/: Cargo.toml
crates/gauss-query/examples/: bench_compile.rs
crates/gauss-query/src/: dialect.rs  lib.rs
crates/gauss-query/tests/: golden.rs
crates/gauss-runtime/: Cargo.toml
crates/gauss-runtime/src/: lib.rs
crates/gauss-scheduler/: Cargo.toml
crates/gauss-scheduler/src/: lib.rs
crates/gauss-semantic/: Cargo.toml
crates/gauss-semantic/src/: lib.rs
crates/gauss-server/: Cargo.toml
crates/gauss-server/src/: auth.rs  cache.rs  content.rs  error.rs  jobs.rs  lib.rs  state.rs
crates/gauss-sql/: Cargo.toml
crates/gauss-sql/src/: csv_ingest.rs  lib.rs  postgres.rs  snowflake.rs  sqlite.rs
crates/gauss-sqlguard/: Cargo.toml
crates/gauss-sqlguard/src/: lib.rs
crates/gauss-textsql/: Cargo.toml
crates/gauss-textsql/src/: lib.rs
crates/gauss-tools/: Cargo.toml
crates/gauss-tools/src/: agent_memory.rs  file_system.rs  lib.rs  python.rs  run_sql.rs  schema_context.rs  visualize_data.rs
crates/gauss-tools/tests/: tools.rs
crates/gauss-tui/: Cargo.toml
crates/gauss-tui/examples/: screenshot.rs
crates/gauss-tui/src/: app.rs  client.rs  lib.rs
crates/gaussctl/: Cargo.toml
crates/gaussctl/src/: main.rs
docs/: ARCHITECTURE.md  COMPARISON.md  NOTEBOOKS_PLAN.md  PORTING_MAP.md  ROADMAP.md  STRATEGY.md  UI_ASSESSMENT.md
docs/adr/: 0001-rust-backend-stack.md  0002-gql-query-engine.md  0003-ai-integration-layer.md
docs/img/: README.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BigNumberView.tsx  Dashboards.tsx  DataSources.test.tsx  DataSources.tsx  HtmlOutput.tsx  NativeSql.tsx  NlAsk.tsx  Notebooks.test.tsx  Notebooks.tsx  QueryBuilder.tsx  ResultView.test.tsx  ResultView.tsx  SavedQuestions.tsx  Settings.tsx
frontend/src/components/charts/: NivoCharts.tsx
frontend/src/lib/: dashboard.test.ts  dashboard.ts  markdown.ts  sql.test.ts  sql.ts  viz.test.ts  viz.ts
frontend/src/test/: setup.ts
