# GaussAnalytics — Cargo workspace
# Owned and operated by Gaussian Technologies.
#
# This workspace hosts the Rust port of the analytics platform's backend
# (formerly Clojure/Python), the administration TUI, and the integration
# layers for Gaussian's MCP Servers and NL2SQL technologies.

[workspace]
resolver = "2"
members = [
    "crates/gauss-core",
    "crates/gauss-config",
    "crates/gauss-query",
    "crates/gauss-db",
    "crates/gauss-drivers",
    "crates/gauss-scheduler",
    "crates/gauss-auth",
    "crates/gauss-mcp-gateway",
    "crates/gauss-nl2sql",
    # NL2SQL engine (ported in-house from the standalone text-to-SQL stack).
    "crates/gauss-engine",
    "crates/gauss-semantic",
    "crates/gauss-sqlguard",
    "crates/gauss-llm",
    "crates/gauss-sql",
    "crates/gauss-textsql",
    "crates/gauss-server",
    "crates/gauss-tui",
    "crates/gaussctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Gaussian Technologies <engineering@gaussian.tech>"]
repository = "https://github.com/rismanmattotorang/gaussanalytics"
homepage = "https://gaussian.tech/analytics"
description = "GaussAnalytics — a fast, secure, AI-native business intelligence platform by Gaussian Technologies."

[workspace.dependencies]
# Internal crates
gauss-core = { path = "crates/gauss-core" }
gauss-config = { path = "crates/gauss-config" }
gauss-query = { path = "crates/gauss-query" }
gauss-db = { path = "crates/gauss-db" }
gauss-auth = { path = "crates/gauss-auth" }
gauss-drivers = { path = "crates/gauss-drivers" }
gauss-scheduler = { path = "crates/gauss-scheduler" }
gauss-mcp-gateway = { path = "crates/gauss-mcp-gateway" }
gauss-nl2sql = { path = "crates/gauss-nl2sql" }
gauss-engine = { path = "crates/gauss-engine" }
gauss-semantic = { path = "crates/gauss-semantic" }
gauss-sqlguard = { path = "crates/gauss-sqlguard" }
gauss-llm = { path = "crates/gauss-llm" }
gauss-sql = { path = "crates/gauss-sql" }
gauss-textsql = { path = "crates/gauss-textsql" }
gauss-server = { path = "crates/gauss-server" }
gauss-tui = { path = "crates/gauss-tui" }

# Async runtime + web
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"

# NL2SQL engine support: JSON-schema tool args, SQL AST guardrails, CSV ingest.
sqlparser = { version = "0.52", features = ["visitor"] }
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1"

# Errors / utility
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI + TUI
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"

# Security
argon2 = "0.5"

# Persistence (Phase 2): the application metadata store and SQL data-source
# drivers. SQLite is the in-process default; Postgres/MySQL connect via the same
# sqlx pool pattern as they are enabled.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "migrate", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
