[package]
name = "gauss-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GaussAnalytics conversational web UI: an axum SSE/WebSocket chat server plus the agent runner binary."

[[bin]]
name = "gauss-chat"
path = "src/main.rs"

[dependencies]
# Web UI server (lib).
gauss-engine.workspace = true
gauss-sql.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower-http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true

# Agent runner binary (wires capabilities and serves the UI).
gauss-llm.workspace = true
gauss-tools.workspace = true
gauss-embed.workspace = true
gauss-memory.workspace = true
gauss-semantic.workspace = true
gauss-textsql.workspace = true
gauss-runtime.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow = "1"
rusqlite.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
