[package]
name = "gauss-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Layered, typed configuration for GaussAnalytics (defaults -> environment)."

[dependencies]
gauss-core.workspace = true
serde.workspace = true
