[package]
name = "gauss-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GaussAnalytics data-source drivers: execute compiled queries and discover schema."

[dependencies]
gauss-core.workspace = true
gauss-query.workspace = true
async-trait.workspace = true
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true }
