[package]
name = "gauss-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics text-embedding providers"

[dependencies]
gauss-engine.workspace = true
async-trait.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true

