[package]
name = "gauss-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics LLM service implementations"

[dependencies]
gauss-engine.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true


