[package]
name = "gauss-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics vector-backed agent memory"

[dependencies]
gauss-engine.workspace = true
gauss-embed.workspace = true
async-trait.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest = { workspace = true, optional = true }

[features]
default = []
qdrant = ["dep:reqwest"]

[dev-dependencies]
tokio.workspace = true

