[package]
name = "gauss-nl2sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "In-house NL2SQL integration: grounding, in-process LLM translation, and read-only guardrails."

[dependencies]
gauss-core.workspace = true
gauss-engine.workspace = true
gauss-textsql.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
gauss-llm.workspace = true
