[package]
name = "gauss-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics runtime assembly helpers shared by the server and TUI binaries"

[dependencies]
gauss-engine.workspace = true
gauss-llm.workspace = true
anyhow = "1"
clap.workspace = true
rusqlite.workspace = true

