[package]
name = "gauss-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GaussAnalytics background job scheduler (refresh, alerts) and notifiers."

[dependencies]
gauss-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
