[package]
name = "gauss-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics semantic layer (a Modeling Definition Language for grounded text-to-SQL)"

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true

