[package]
name = "gauss-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics SQL runner implementations"

[dependencies]
gauss-engine.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:csv"]
postgres = ["dep:sqlx"]
snowflake = ["dep:reqwest"]

