[package]
name = "gauss-textsql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GaussAnalytics self-correcting text-to-SQL pipeline (schema linking, few-shot, AST guardrails, execution-guided repair)"

[dependencies]
gauss-engine.workspace = true
gauss-semantic.workspace = true
gauss-sqlguard.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
tokio.workspace = true
gauss-sql.workspace = true
rusqlite = { workspace = true }

